Allow account creation without login

--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -26,7 +26,10 @@
 			Password: <input type="password" name="password"/>
 		</p>
 		
-		<input type="submit" value="Login"/>
-	</form>
+                <input type="submit" value="Login"/>
+                <div>
+                        <a th:href="@{/accounts/showFormForAdd}">Create Account</a>
+                </div>
+        </form>
 </body>
 </html>
