--- a/src/main/resources/templates/fancy-login.html
+++ b/src/main/resources/templates/fancy-login.html
@@ -58,6 +58,11 @@
                                     <div class="col-sm-6 controls">
                                         <button type="submit" class="btn btn-success">Login</button>
                                     </div>
+
+                                </div>
+
+                                <div class="mt-2">
+                                    <a th:href="@{/accounts/showFormForAdd}">Create Account</a>
                                 </div>
 
                             </form>
