Add user registration flow

--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -28,7 +28,7 @@
 		
                 <input type="submit" value="Login"/>
                 <div>
-                        <a th:href="@{/accounts/showFormForAdd}">Create Account</a>
+                        <a th:href="@{/users/register}">Create Account</a>
                 </div>
         </form>
 </body>
