--- a/src/main/resources/templates/fancy-login.html
+++ b/src/main/resources/templates/fancy-login.html
@@ -62,7 +62,7 @@
                                 </div>
 
                                 <div class="mt-2">
-                                    <a th:href="@{/accounts/showFormForAdd}">Create Account</a>
+                                    <a th:href="@{/users/register}">Create Account</a>
                                 </div>
 
                             </form>
