--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -5,28 +5,31 @@
 <meta charset="UTF-8">
 <title>Login Page</title>
 <style type="text/css">
-	.failed{
-		color:red;
-	}
+.failed {
+	color: red;
+}
 </style>
 </head>
 <body>
 	<h2>Login Page</h2>
-	
+
 	<form action="#" th:action="@{/authenticateTheUser}" method="post">
 		<div th:if="${param.error}">
 			<i class="failed">Sorry! You entered a invalid username/password.</i>
 		</div>
-	
+
 		<p>
-			User Name: <input type="text" name="username"/>
+			User Name: <input type="text" name="username" />
 		</p>
-		
+
 		<p>
-			Password: <input type="password" name="password"/>
+			Password: <input type="password" name="password" />
 		</p>
-		
-		<input type="submit" value="Login"/>
+
+		<input type="submit" value="Login" />
+		<div>
+			<a th:href="@{/accounts/showFormForAdd}">Create Account</a>
+		</div>
 	</form>
 </body>
 </html>
